# gband

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml  run-tests.yml
gband/: Cargo.toml
gband-server/: Cargo.toml  inputs.ron  super-myco-boi.sav
gband-server/src/: lib.rs  main.rs
gband-webclient/: Cargo.toml  index.html  style.css
gband-webclient/roms/: README.md  RenegadeRush.gb  desertboy.gb  flappyboy.gb  super-myco-boi.gbc  ucity.gbc
gband-webclient/src/: app.rs  emulator.rs  main.rs
gband-wgpu/: Cargo.toml
gband-wgpu/src/: debugger.rs  emulation_thread.rs  main.rs  socket_serial_transport.rs
gband/benches/: decoder_benchmark.rs
gband/src/: bus.rs  cgb_double_speed.rs  controller_state.rs  dma.rs  enums.rs  interrupt.rs  joypad_state.rs  lib.rs  oam_dma.rs  rgb_palette.rs  serial.rs  serial_transport.rs  timer_regs.rs  utils.rs
gband/src/cartridge/: header.rs  mod.rs
gband/src/cartridge/mappers/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  no_mapper.rs
gband/src/cpu/: debugger.rs  decoder.rs  mod.rs
gband/src/ppu/: cgb_palette.rs  fifo_mode.rs  lcd_control.rs  lcd_status.rs  mod.rs  palette_table.rs  pixel_fifo.rs
gband/tests/: cgb-acid2.gbc  cgb_acid2.rs  dmg_acid2.rs
serial_rom/: Makefile
serial_rom/include/: hardware.inc
serial_rom/src/: main.asm  sio.asm
vuln-rom/: .gitignore  LICENSE  Makefile  README  ascii_tiles.xcf  background_tiles.xcf  project.mk  sprite_tiles.xcf
vuln-rom/inc/: gbhw.inc
vuln-rom/src/: entry.asm  header.asm  init.asm  inputMenu.asm  main.asm  menu.asm  rom0.asm  serial.asm  sram.asm  vectors.asm  wram.asm
vuln-rom/src/include/: constants.inc  sgb_border.inc  sgb_packets.inc
vuln-rom/src/res/: sgb_border_tilemap.toobfuscate
vuln-rom/src/tools/: obfuscate.py
writeups/: flag2.py
writeups/flag3/: project.mk
writeups/flag3/src/: entry.asm  init.asm  inputMenu.asm  rom0.asm  serial.asm  (+2 more)
(+4 files in other folders)
