[package]
name = "gband-server"
version = "0.1.0"
edition = "2021"
authors = ["Benoît C. <bcortier@pm.me>"]

[dependencies]
gband = { path = "../gband" }
clap = { version = "3", features = ["derive"]}
serde = { version = "1", features = ["derive"] }
ron = "0.7"
tap = "1"
anyhow = "1"
spin_sleep = "1.1.1"
