[package]
name = "gband-webclient"
version = "0.1.0"
edition = "2021"
authors = ["Benoît C. <bcortier@pm.me>"]

[dependencies]
gband = { path = "../gband" }
gloo = "0.7.0"
yew = "0.19.3"
wasm-bindgen = "0.2.80"

[dependencies.gilrs]
version = "0.8"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.57"
features = [
  "KeyboardEvent",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Event",
  "HtmlInputElement",
  "FileList"
]
